cluster/apps/media/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: media
  labels:
    app: plex
spec:
  selector:
    app: plex
  ports:
    - port: 80
      name: http
      targetPort: 32400
